resolved layout issues with posistioning psuedo elements

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -106,45 +106,65 @@ a {
 
 /* Layout */
 .container {
-    border: red 1px solid;
-	margin: auto 0;
-    padding: 0 2.4rem;
+    /* border: 1px solid red; */
+    width: 100%;
+    max-width: 375px;
+    margin: 0 auto;
 }
 
-.time-tracking-dash {
-    border: 1px solid green;
+.dash {
+    /* border: 1px solid green; */
     display: grid;
-    grid-column: 1fr;
-    grid-row: 7(1fr);
-    grid-template-areas: 
-        "user-block"
-        "work-block"
-        "play-block"
-        "study-block"
-        "exercise-block"
-        "social-block"
-        "self-care-block";
-    margin-bottom: 2.4rem;
-    padding: 8.1rem 0 8.1rem 0;
+    grid-template-columns: minmax(min-content, max-content);
+    grid-template-rows: minmax(min-content, max-content);
+    grid: 
+        "user" 
+        "work"
+        "play"
+        "study"
+        "exercise"
+        "social"
+        "self-care";
     gap: 2.4rem;
+    margin: 8.1rem 2.4rem;
 }
 
-.user-block {
-    grid-area: user-block;
-    background: var(--clr-neutral-dark-blue);
+.user,
+.work,
+.play,
+.study,
+.exercise,
+.social,
+.self-care {
     border-radius: 1.5rem;
+    overflow: hidden;
 }
 
-.user-profile {
-	place-items: center;
+.user {
+    grid-area: user;
+    background-color: var(--clr-neutral-dark-blue);
+}
+
+.profile {
+    position: relative;
     display: flex;
     flex-direction: row;
     align-items: center;
-    background: var(--clr-primary-blue);
-    border-radius: 1.5rem;
+    isolation: isolate;
 }
 
-.user-profile-img {
+.profile::before,
+.profile::after {
+    content: '';
+    position: absolute;
+    background-color: var(--clr-primary-blue);
+    width: 100%;
+    height: 100%;
+    border-radius: 1.5rem;
+    z-index: -1;
+}
+
+.profile__img {
     width: 6.4rem;
     height: 6.4rem;
     border: 3px solid var(--clr-white);
@@ -152,107 +172,178 @@ a {
     margin: 3.5rem 2rem 3.4rem 3.2rem;
 }
 
-.user-profile-info__sub-title {
+.profile-text {
+    margin-right: 3.9rem;
+}
+
+.profile-text__sub-title {
     margin-bottom: 0.4rem;
+}
+
+.profile-text__sub-title--accent {
     color: var(--clr-neutral-pale-blue)
 }
 
 .time-periods {
     display: flex;
-    flex-direction: row;
     justify-content: space-evenly;
-    text-align: center;
+    margin: 2.4rem 0 2.5rem 0;
 }
 
 .btn {
-    background: red;
-    color: var(--clr--btn--passive);
     border: none;
-    margin: 2.4rem 0 2.5rem 0; 
+    background: none;
+    color: var(--clr--btn--passive);
     cursor: pointer;
 }
 
-/* .btn {
-    background: red;
-    color: var(--clr--btn--passive);
-    border: none;
-    margin: 1.2rem 0 1.25rem 0; 
-    padding: 1.2rem 2rem 1.25rem 2rem;
-    cursor: pointer;
-} */
-
-.btn__active {
-    color: var(--clr-white);
+.btn--active {
+    color: var(--clr-white)
 }
 
-.work-block {
-    grid-area: work-block;
-} 
-
-.time-stats,
-.work-block-background {
-    border-radius: 1.5rem;
-}
-
-.time-stats {
+.work {
+    grid-area: work;
     position: relative;
-    background: var(--clr-neutral-dark-blue);
-    margin-top: -120.5px;
+    background-color: var(--clr-primary-work);
+    isolation: isolate;
+    z-index: 0;
+}
+
+.work::before,
+.work::after {
+    content: "";
+    position: absolute;
+    background-image: url("../images/icon-work.svg");
+    background-repeat: no-repeat;
+    width: 7.8rem;
+    height: 7.8rem;
+    top: -10.90px;
+    right: 17.42px;
+    z-index: -1;
+}
+
+.time-report {
+    background-color: var(--clr-neutral-dark-blue);
+    border-radius: 1.5rem;
+    margin-top: 3.8rem;
     padding: 2.8rem 2.4rem;
-    z-index: 10;
 }
 
-.time-stats-top {
-    margin-bottom: .7rem;
-}
-
-.time-stats-top,
-.time-stats-btm {
+.time-report__top,
+.time-report__btm {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
 
-.time-stats__accent {
-    color: var(--clr-neutral-pale-blue)
+.time-report__top {
+    margin-bottom: .6rem;
 }
 
-.work-block-background {
-    background: var(--clr-primary-work);
-    overflow: hidden;
-}
-
-.work-block-background--img {
+.play {
+    grid-area: play;
     position: relative;
+    background-color: var(--clr-primary-play);
+    isolation: isolate;
     z-index: 0;
+}
+
+.play::before,
+.play::after {
+    content: "";
+    position: absolute;
+    background-image: url("../images/icon-play.svg");
+    background-repeat: no-repeat;
+    width: 9rem;
+    height: 9rem;
+    top: -14.4px;
+    right: 11px;
+    z-index: -1;
+}
+
+.study {
+    grid-area: study;
+    position: relative;
+    background-color: var(--clr-primary-study);
+    isolation: isolate;
+    z-index: 0;
+}
+
+.study::before,
+.study::after {
+    content: "";
+    position: absolute;
+    background-image: url("../images/icon-study.svg");
+    background-repeat: no-repeat;
     width: 7.8rem;
     height: 7.8rem;
-    margin: -1.091rem 1.742rem 9.291rem auto;
+    top: -6.05px;
+    right: 17.07px;
+    z-index: -1;
 }
 
-.play-block {
-    grid-area: play-block;
-    background-color: yellow;
-
-}
-.study-block {
-    grid-area: study-block;
-    background-color: orange;
-
-}
-.exercise-block {
-    grid-area: exercise-block;
-    background-color: purple;
-}
-.social-block {
-    grid-area: social-block;
-    background-color: aqua;
+.exercise {
+    grid-area: exercise;
+    position: relative;
+    background-color: var(--clr-primary-exercise);
+    isolation: isolate;
+    z-index: 0;
 }
 
-.self-care-block {
-    grid-area: self-care-block;
-    background-color: indianred;
+.exercise::before,
+.exercise::after {
+    content: "";
+    position: absolute;
+    background-image: url("../images/icon-exercise.svg");
+    background-repeat: no-repeat;
+    width: 81px;
+    height: 53.48px;
+    top: -0.42px;
+    right: 16.27px;
+    z-index: -1;
+}
+
+.social {
+    grid-area: social;
+    position: relative;
+    background-color: var(--clr-primary-social);
+    isolation: isolate;
+    z-index: 0;
+}
+
+.social::before,
+.social::after {
+    content: "";
+    position: absolute;
+    background-image: url("../images/icon-social.svg");
+    background-repeat: no-repeat;
+    width: 73.6px;
+    height: 100px;
+    top: -15px;
+    right: 13.48px;
+    z-index: -1;
+}
+
+.self-care {
+    grid-area: self-care;
+    position: relative;
+    background-color: var(--clr-primary-self-care);
+    isolation: isolate;
+    z-index: 0;
+}
+
+.self-care::before,
+.self-care::after {
+    content: "";
+    position: absolute;
+    background-image: url("../images/icon-self-care.svg");
+    background-repeat: no-repeat;
+    width: 72px;
+    height: 66px;
+    top: -15px;
+    right: 13.48px;
+    z-index: -1;
 }
 
 /* Frontend Mentor | attribution */
